BPER/DEVF/force-app/main/default/objects/SV_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>