BPER/DEVF/force-app/main/default/objects/SV_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>