BPER/DEVF/force-app/main/default/objects/SV_Log__c/fields/Output_Payload__c.field-meta.xml
<CustomField>
    <fullName>Output_Payload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Output Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>