BPER/DEVF/force-app/main/default/objects/SV_Log__c/fields/RequestHeader__c.field-meta.xml
<CustomField>
    <fullName>RequestHeader__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>