BPER/DEVF/force-app/main/default/objects/SV_Log__c/fields/ResponseHeader__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeader__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>