BPER/DEVF/force-app/main/default/objects/SV_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Success__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>