BPER/DEVF/force-app/main/default/objects/SV_Log__c/listViews/Campagne_CC.listView-meta.xml
<ListView>
    <fullName>Campagne_CC</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Success__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Endpoint__c</columns>
    <columns>Input_Payload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>Ricontatto</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>disconnect</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Campagne CC</label>
</ListView>