BPER/DEVF/force-app/main/default/objects/SV_Log__c/listViews/Error.listView-meta.xml
<ListView>
    <fullName>Error</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Success__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Input_Payload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Error</label>
</ListView>